--- a/Boilerplate/Resources/Localizations/Common_en.json
+++ b/Boilerplate/Resources/Localizations/Common_en.json
@@ -15,5 +15,7 @@
   "error": "Error",
   "success": "Success",
   "warning": "Warning",
-  "info": "Information"
+  "info": "Information",
+  "app_description": "A modern SwiftUI boilerplate with theming and localization",
+  "recent_activity": "Recent Activity"
 }
