--- a/Boilerplate/Resources/Localizations/Navigation_en.json
+++ b/Boilerplate/Resources/Localizations/Navigation_en.json
@@ -7,5 +7,8 @@
   "favorites": "Favorites",
   "history": "History",
   "about": "About",
-  "language": "Language"
+  "language": "Language",
+  "library": "Library",
+  "quick_actions": "Quick Actions",
+  "recent_activity": "Recent Activity"
 }
