--- a/Boilerplate/Resources/Localizations/Navigation_es.json
+++ b/Boilerplate/Resources/Localizations/Navigation_es.json
@@ -7,5 +7,8 @@
   "favorites": "Favoritos",
   "history": "Historial",
   "about": "Acerca de",
-  "language": "Idioma"
+  "language": "Idioma",
+  "library": "Biblioteca",
+  "quick_actions": "Acciones rápidas",
+  "recent_activity": "Actividad reciente"
 }
