--- a/Boilerplate/Resources/Localizations/Navigation_fr.json
+++ b/Boilerplate/Resources/Localizations/Navigation_fr.json
@@ -7,5 +7,8 @@
   "favorites": "Favoris",
   "history": "Historique",
   "about": "À propos",
-  "language": "Langue"
+  "language": "Langue",
+  "library": "Bibliothèque",
+  "quick_actions": "Actions rapides",
+  "recent_activity": "Activité récente"
 }
